// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`features/collaborator-avatars/CollaboratorList render() should render default component 1`] = `
<div
  className="usm-collaborator-list"
>
  <div
    className="manage-all-btn-container"
  >
    <Link
      className=""
      href="/file/111/collaborators/"
      rel="noopener"
      target="_blank"
    >
      <PlainButton
        className="manage-all-btn"
        type="button"
      >
        <FormattedMessage
          defaultMessage="Manage All"
          id="boxui.collaboratorAvatars.manageAllLinkText"
        />
      </PlainButton>
    </Link>
  </div>
  <ul
    className="collaborator-list"
  >
    <CollaboratorListItem
      collaborator={
        Object {
          "collabID": 1,
          "email": "testa@example.com",
          "hasCustomAvatar": false,
          "name": "test a",
          "type": "user",
          "userID": 1,
        }
      }
      index={0}
      key="1-user"
      trackingProps={
        Object {
          "emailProps": undefined,
          "usernameProps": undefined,
        }
      }
    />
    <CollaboratorListItem
      collaborator={
        Object {
          "collabID": 2,
          "email": "testb@example.com",
          "name": "test b",
          "type": "user",
          "userID": 2,
        }
      }
      index={1}
      key="2-user"
      trackingProps={
        Object {
          "emailProps": undefined,
          "usernameProps": undefined,
        }
      }
    />
    <CollaboratorListItem
      collaborator={
        Object {
          "collabID": 3,
          "email": "testc@example.com",
          "hasCustomAvatar": true,
          "imageUrl": "https://foo.bar",
          "name": "test c",
          "profileUrl": "http://foo.bar.profile",
          "type": "user",
          "userID": 3,
        }
      }
      index={2}
      key="3-user"
      trackingProps={
        Object {
          "emailProps": undefined,
          "usernameProps": undefined,
        }
      }
    />
  </ul>
  <ModalActions>
    <Button
      className="btn-done"
      isLoading={false}
      showRadar={false}
      type="submit"
    >
      <FormattedMessage
        defaultMessage="Done"
        id="boxui.core.done"
      />
    </Button>
  </ModalActions>
</div>
`;

exports[`features/collaborator-avatars/CollaboratorList render() should render extra row with View additional people if list.size > maxCollaboratorListSize 1`] = `
<div
  className="usm-collaborator-list"
>
  <div
    className="manage-all-btn-container"
  >
    <Link
      className=""
      href="/file/111/collaborators/"
      rel="noopener"
      target="_blank"
    >
      <PlainButton
        className="manage-all-btn"
        type="button"
      >
        <FormattedMessage
          defaultMessage="Manage All"
          id="boxui.collaboratorAvatars.manageAllLinkText"
        />
      </PlainButton>
    </Link>
  </div>
  <ul
    className="collaborator-list"
  >
    <CollaboratorListItem
      collaborator={
        Object {
          "collabID": 1,
          "email": "testa@example.com",
          "hasCustomAvatar": false,
          "name": "test a",
          "type": "user",
          "userID": 1,
        }
      }
      index={0}
      key="1-user"
      trackingProps={
        Object {
          "emailProps": undefined,
          "usernameProps": undefined,
        }
      }
    />
    <CollaboratorListItem
      collaborator={
        Object {
          "collabID": 2,
          "email": "testb@example.com",
          "name": "test b",
          "type": "user",
          "userID": 2,
        }
      }
      index={1}
      key="2-user"
      trackingProps={
        Object {
          "emailProps": undefined,
          "usernameProps": undefined,
        }
      }
    />
    <li
      className="collaborator-list-item more"
    >
      <div>
        <CollaborationBadge
          height={32}
          width={32}
        />
      </div>
      <div>
        <Link
          className=""
          href="/file/111/collaborators/"
          rel="noopener"
          target="_blank"
        >
          <FormattedMessage
            defaultMessage="View additional people"
            id="boxui.collaboratorAvatars.viewAdditionalPeopleText"
          />
        </Link>
      </div>
    </li>
  </ul>
  <ModalActions>
    <Button
      className="btn-done"
      isLoading={false}
      showRadar={false}
      type="submit"
    >
      <FormattedMessage
        defaultMessage="Done"
        id="boxui.core.done"
      />
    </Button>
  </ModalActions>
</div>
`;
